--- a/index.html
+++ b/index.html
@@ -18,7 +18,43 @@
 <body>
     <header>
         <div class="container">
-            Test
+            <nav>
+                 <a href="/" class="header__home">
+                    <img src="img/logo.svg" alt="California" class="header__logo">
+                 </a>
+                 <ul class="links">
+                    <li>
+                        <a href="#" class="header__link">All products</a>
+                    </li>
+                    <li>
+                        <a href="#" class="header__link">Solutions</a>
+                    </li>
+                    <li>
+                        <a href="#" class="header__link">About</a>
+                    </li>
+                    <li>
+                        <a href="#" class="header__link">Support</a>
+                    </li>
+                 </ul>
+                 <div class="buttons">
+                    <button class="search" type="button">
+                        <img src="img/search.svg" alt="Search" class="header__icon">
+                    </button>
+                    <button class="cart" type="button">
+                        <img src="img/cart.svg" alt="Cart" class="header__icon">
+                    </button>
+                 </div>
+            </nav>
+            <div class="banner">
+                <div class="info">
+                    <h1>The new phones are here take a look.</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque in est dui, aliquam, tempor. Faucibus morbi turpis.</p>
+                    <button type="button" class="expl-btn">Explore</button>
+                </div>
+                <div class="images">
+                    <img src="img/phones.png" alt="iPhones 13 Pro Max">
+                </div>
+            </div>
         </div>
     </header>
     <section class="categories">
