--- a/index.html
+++ b/index.html
@@ -51,14 +51,43 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque in est dui, aliquam, tempor. Faucibus morbi turpis.</p>
                     <button type="button" class="expl-btn">Explore</button>
                 </div>
-                <div class="images">
-                    <img src="img/phones.png" alt="iPhones 13 Pro Max">
-                </div>
+                <img class="image" src="img/phone.png" alt="iPhones 13 Pro Max">
             </div>
         </div>
     </header>
     <section class="categories">
-        <div class="container"></div>
+        <div class="container">
+            <h2 class="categories_header">Shop our latest offers and categories</h2>
+            <p class="categories_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque in est dui, aliquam, tempor. Faucibus morbi turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="tabs">
+                <div class="hor">
+                    <div class="tab">
+                        <div class="tab__img tab__img_laptops"></div>
+                        <p class="tab__desc">Laptops</p>
+                        <h3 class="tab__head">True Laptop Solution</h3>
+                    </div>
+                    <div class="tab tab_flex">
+                        <div class="tab__img tab__img_watches"></div>
+                        <div>
+                            <p class="tab__desc">Watches</p>
+                            <h3 class="tab__head">Not just stylish</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="vert">
+                    <div class="tab">
+                        <div class="tab__img tab__img_phones"></div>
+                        <p class="tab__desc">Phones</p>
+                        <h3 class="tab__head">Your day to day life</h3>
+                    </div>
+                    <div class="tab">
+                        <p class="tab__desc">Tablets</p>
+                        <h3 class="tab__head">Empower your work</h3>
+                        <div class="tab__img tab__img_tablets"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="popular">
         <div class="container"></div>
