--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- OG Tags -->
     <meta property="og:title" content="California - Main">
 	<meta property="og:description" content="The new phones are here take a look.">
-    <meta property="og:image" content="img/og-image.jpg"/>
+    <meta property="og:image" content="img/og-image.jpg">
 	<meta property="og:type" content="article">
 	<meta property="og:site_name" content="California">
 </head>
@@ -57,8 +57,8 @@
     </header>
     <section class="categories">
         <div class="container">
-            <h2 class="categories_header">Shop our latest offers and categories</h2>
-            <p class="categories_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque in est dui, aliquam, tempor. Faucibus morbi turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h2 class="categories__header">Shop our latest offers and categories</h2>
+            <p class="categories__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque in est dui, aliquam, tempor. Faucibus morbi turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <div class="tabs">
                 <div class="hor">
                     <div class="tab">
@@ -90,16 +90,100 @@
         </div>
     </section>
     <section class="popular">
-        <div class="container"></div>
+        <div class="container">
+            <h2 class="popular__header">Save on our most selled items</h2>
+            <h6 class="popular__desc">Our new Limited Edition Winter Design BESPOKE 4-Door Flex™</h6>
+            <div class="items">
+                <div class="item">
+                    <img src="img/pop-item1.png" alt="MacBook Pro 13">
+                    <h5>MacBook Pro 13</h5>
+                    <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
+                    <span>$ 1,200.00 USD</span>
+                </div>
+                <div class="item">
+                    <img src="img/pop-item2.png" alt="Smart Galaxy Watch 3">
+                    <h5>Smart Galaxy Watch 3</h5>
+                    <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+                    <span>$ 199.00 USD</span>
+                </div>
+                <div class="item">
+                    <img src="img/pop-item3.png" alt="MacBook Air M1">
+                    <h5>MacBook Air M1</h5>
+                    <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+                    <span>$ 1,009.00 USD</span>
+                </div>
+                <div class="item">
+                    <img src="img/pop-item4.png" alt="iPad">
+                    <h5>iPad</h5>
+                    <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+                    <span>$ 610.00 USD</span>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="best">
-        <div class="container"></div>
+        <div class="container">
+            <h2 class="best__header">See the best around here</h2>
+            <h6 class="best__desc">Our new Limited Edition Winter Design BESPOKE 4-Door Flex™</h6>
+            <div class="items">
+                <div class="item">
+                    <h6>Smart light bulb pack</h6>
+                    <h4>Latest and gratest</h4>
+                    <button type="button" class="expl-btn">Explore</button>
+                    <img src="img/best-item1.png" alt="Two watches">
+                </div>
+                <div class="item">
+                    <h6>Smart light bulb pack</h6>
+                    <h4>Best selling</h4>
+                    <button type="button" class="expl-btn">Explore</button>
+                    <img src="img/best-item2.png" alt="Two watches">
+                </div>
+                <div class="item">
+                    <h6>Smart light bulb pack</h6>
+                    <h4>Every product</h4>
+                    <button type="button" class="expl-btn">Explore</button>
+                    <img src="img/best-item3.png" alt="Two watches">
+                </div>
+            </div>
+        </div>
     </section>
     <section class="ideas">
-        <div class="container"></div>
+        <div class="container">
+            <h2 class="ideas__header">Ideas have a place here</h2>
+            <h6 class="ideas__desc">Our new Limited Edition Winter Design BESPOKE 4-Door Flex™</h6>
+            <div class="info">
+                <img src="img/book.png" alt="Opened book">
+                <div class="text">
+                    <p>We Make It Easy To Find The Great Design Talent, Easier...</p>
+                    <p>Road Design Handbook For The International Road...</p>
+                    <p>The Best Kept Secrets About Creative People</p>
+                    <p>We Make It Easy To Find The Great Design Talent, Easier...</p>
+                </div>
+            </div>
+            <a class="ideas__all" href="#">See All</a>
+        </div>
     </section>
     <section class="search">
-        <div class="container"></div>
+        <div class="container">
+            <h2 class="search__header">Looking for anything else?</h2>
+            <div class="search__bar">
+                <form action="#">
+                    <button type="submit"></button>
+                    <input type="text" placeholder="Search keyword">
+                </form>
+            </div>
+            <div class="search_suggestions">
+                <button type="button">iPhone</button>
+                <button type="button">Charger</button>
+                <button type="button">Gift</button>
+                <button type="button">Google Pixel 3</button>
+                <button type="button">Keyboard</button>
+                <button type="button">13 Pro Max</button>
+                <button type="button">iPhone 12</button>
+                <button type="button">Laptop</button>
+                <button type="button">Mobile</button>
+            </div>
+        </div>
     </section>
     <section class="mail">
         <div class="container"></div>
