Footer, Mail Sections

--- a/index.html
+++ b/index.html
@@ -186,10 +186,52 @@
         </div>
     </section>
     <section class="mail">
-        <div class="container"></div>
+        <div class="container">
+            <div class="banner">
+                <h2 class="mail__header">Never miss a thing</h2>
+                <p class="mail__desc">Sign up for texts to be notified about our best offers on the perfect gifts.</p>
+                <img class="mail__img" src="img/mail.png" alt="Laptop, phones and watch">
+                <form class="bar" action="#">
+                    <input type="text" placeholder="Your email">
+                    <button type="submit">Sign up</button>
+                </form>
+            </div>
+        </div>
     </section>
     <footer>
-        <div class="container"></div>
+        <div class="container">
+            <nav>
+                <a href="/" class="footer__home">
+                    <img src="img/logo.svg" alt="California" class="footer__logo">
+                 </a>
+                 <div class="list">
+                    <a href="#" class="list__header">All products</a>
+                    <a href="#" class="list__link">Phones</a>
+                    <a href="#" class="list__link">Watches</a>
+                    <a href="#" class="list__link">Tablets</a>
+                    <a href="#" class="list__link">Laptops</a>
+                 </div>
+                 <div class="list">
+                    <a href="#" class="list__header">Company</a>
+                    <a href="#" class="list__link">About</a>
+                    <a href="#" class="list__link">Support</a>
+                 </div>
+                 <div class="list">
+                    <a href="#" class="list__header">Support</a>
+                    <a href="#" class="list__link">Style Guide</a>
+                    <a href="#" class="list__link">Licensing</a>
+                    <a href="#" class="list__link">Change Log</a>
+                    <a href="#" class="list__link">Contact</a>
+                 </div>
+                 <div class="list">
+                    <a href="#" class="list__header">Follow Us</a>
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="list__link">Instagram</a>
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="list__link">Facebook</a>
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="list__link">LinkedIn</a>
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="list__link">YouTube</a>
+                 </div>
+            </nav>
+        </div>
     </footer>
 </body>
 </html>
