--- a/index.html
+++ b/index.html
@@ -201,36 +201,59 @@
     <footer>
         <div class="container">
             <nav>
-                <a href="/" class="footer__home">
-                    <img src="img/logo.svg" alt="California" class="footer__logo">
-                 </a>
+                <div class="about">
+                    <a href="/" class="footer__home">
+                        <img src="img/logo.svg" alt="California" class="about__logo">
+                     </a>
+                     <p class="about__desc">Sign up for texts to be notified about our best offers on the perfect gifts.</p>
+                </div>
                  <div class="list">
-                    <a href="#" class="list__header">All products</a>
-                    <a href="#" class="list__link">Phones</a>
-                    <a href="#" class="list__link">Watches</a>
-                    <a href="#" class="list__link">Tablets</a>
-                    <a href="#" class="list__link">Laptops</a>
+                    <h5><a href="#">All products</a></h5>
+                    <ul>
+                        <li><a href="#">Phones</a></li>
+                        <li><a href="#">Watches</a></li>
+                        <li><a href="#">Tablets</a></li>
+                        <li><a href="#">Laptops</a></li>
+                     </ul>
+                 </div>
+                 
+                 <div class="list">
+                    <h5><a href="#">Company</a></h5>
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
                  </div>
                  <div class="list">
-                    <a href="#" class="list__header">Company</a>
-                    <a href="#" class="list__link">About</a>
-                    <a href="#" class="list__link">Support</a>
+                    <h5><a href="#">Support</a></h5>
+                    <ul>
+                        <li><a href="#">Style Guide</a></li>
+                        <li><a href="#">Licensing</a></li>
+                        <li><a href="#">Change Log</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
                  </div>
                  <div class="list">
-                    <a href="#" class="list__header">Support</a>
-                    <a href="#" class="list__link">Style Guide</a>
-                    <a href="#" class="list__link">Licensing</a>
-                    <a href="#" class="list__link">Change Log</a>
-                    <a href="#" class="list__link">Contact</a>
-                 </div>
-                 <div class="list">
-                    <a href="#" class="list__header">Follow Us</a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="list__link">Instagram</a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="list__link">Facebook</a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="list__link">LinkedIn</a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="list__link">YouTube</a>
+                    <h5><a href="#">Follow Us</a></h5>
+                    <ul>
+                       <li><a href="#" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                       <li><a href="#" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+                       <li><a href="#" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                       <li><a href="#" target="_blank" rel="noopener noreferrer">YouTube</a></li>
+                    </ul>
                  </div>
             </nav>
+            <hr>
+            <div class="credentials">
+                <div class="madeby">
+                    <span>Made by:</span>
+                    <a href="#" target="_blank" rel="noopener noreferrer">Azwedo</a>
+                </div>
+                <div class="poweredby">
+                    <span>Powered by:</span>
+                    <a href="#" target="_blank" rel="noopener noreferrer">Webflow</a>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
