--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="img/favicon.jpg">
     <!-- Connecting CSS styles -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <!-- OG Tags -->
     <meta property="og:title" content="California - Main">
 	<meta property="og:description" content="The new phones are here take a look.">
