Media 992px + Slider

--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
                  </div>
             </nav>
             <div class="banner">
+                <button type="button" class="banner__btn banner__prev"></button>
                 <div class="info">
                     <h1>The new phones are here take a look.</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque in est dui, aliquam, tempor. Faucibus morbi turpis.</p>
                     <button type="button" class="expl-btn">Explore</button>
                 </div>
                 <img class="image" src="img/phone.png" alt="iPhones 13 Pro Max">
+                <button type="button" class="banner__btn banner__next"></button>
             </div>
         </div>
     </header>
@@ -62,7 +64,7 @@
             <p class="categories__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque in est dui, aliquam, tempor. Faucibus morbi turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <div class="tabs">
                 <div class="hor">
-                    <div class="tab">
+                    <div class="tab tab_big">
                         <div class="tab__img tab__img_laptops"></div>
                         <p class="tab__desc">Laptops</p>
                         <h3 class="tab__head">True Laptop Solution</h3>
