--- a/index.html
+++ b/index.html
@@ -169,12 +169,10 @@
     <section class="search">
         <div class="container">
             <h2 class="search__header">Looking for anything else?</h2>
-            <div class="search__bar">
-                <form action="#">
-                    <button type="submit"></button>
-                    <input type="text" placeholder="Search keyword">
-                </form>
-            </div>
+            <form class="search__bar" action="#">
+                <button type="submit"></button>
+                <input type="text" placeholder="Search keyword">
+            </form>
             <div class="search_suggestions">
                 <button type="button">iPhone</button>
                 <button type="button">Charger</button>
