Optimized selectors in SCSS

--- a/index.html
+++ b/index.html
@@ -245,13 +245,13 @@
             </nav>
             <hr>
             <div class="credentials">
-                <div class="madeby">
-                    <span>Made by:</span>
-                    <a href="#" target="_blank" rel="noopener noreferrer">Azwedo</a>
+                <div class="credit madeby">
+                    <span class="credit__label">Made by:</span>
+                    <a class="credit__link" href="#" target="_blank" rel="noopener noreferrer">Azwedo</a>
                 </div>
-                <div class="poweredby">
-                    <span>Powered by:</span>
-                    <a href="#" target="_blank" rel="noopener noreferrer">Webflow</a>
+                <div class="credit poweredby">
+                    <span class="credit__label">Powered by:</span>
+                    <a class="credit__link" href="https://github.com/Kumchenko" target="_blank" rel="noopener noreferrer">Kirill Kumchenko</a>
                 </div>
             </div>
         </div>
