--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                     <button class="cart" type="button">
                         <img src="img/cart.svg" alt="Cart" class="header__icon">
                     </button>
+                    <button class="burger">
+                        <span></span>
+                    </button>
                  </div>
             </nav>
             <!-- Slider main container -->
@@ -72,7 +75,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="info">
-                        <h1>Laptops with discount.</h1>
+                        <h2>Laptops with discount.</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque in est dui, aliquam, tempor. Faucibus morbi turpis.</p>
                         <button type="button" class="expl-btn">Explore</button>
                     </div>
